--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 22px;
+}
+
 body {
-  height: 100%;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,24 +22,20 @@ code {
     monospace;
 }
 
-.app {
+.App {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  width: 100%;
-  border: 1px solid mediumblue;
+  margin: auto;
 }
 
 header {
   background-color: mediumblue;
   color: aliceblue;
   text-align: center;
-  height: 15vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 100%;
+  padding: 0 0.25em;
 }
 
 footer {
@@ -44,12 +44,16 @@ footer {
   color: aliceblue;
   display: grid;
   place-content: center;
-  height: 10vh;
 }
 
 main {
-  min-height: 75vh;
-  height: calc(100% - 25vh);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
 }
 
 .item svg {
