--- a/src/index.css
+++ b/src/index.css
@@ -31,15 +31,21 @@ code {
 }
 
 header {
+  display: flex;
   background-color: mediumblue;
   color: aliceblue;
   text-align: center;
   width: 100%;
   padding: 0 0.25em;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
 }
 
 footer {
-  padding: 0.25em;
+  padding: 0.5em;
+  width: 100%;
+  height: 50px;
   background-color: mediumblue;
   color: aliceblue;
   display: grid;
@@ -91,20 +97,28 @@ input[type="checkbox"] {
 
 .addForm {
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.addForm input[type="text"] {
+  font-size: 1rem;
+  min-height: 48px;
+  padding: 0.25rem;
 }
 
 .addForm label {
-  padding: 0 10px;
+  padding: 0 5px;
 }
 
 .addForm svg {
-  height: 20px;
-  width: 20px;
+  width: 40px;
 }
 
 .addForm input[type="text"] {
   height: 30px;
-  width: 200px;
+  width: 100%;
 }
 
 .searchForm {
